<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">KidneyApp 2.0</string>
    <!--
        By convention, "action" denotes that this String will be used as the label for an Action,
        typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
   -->
    <string name="action_settings">Settings</string>
    <!-- Menu label to fetch updated weather info from the server -->
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="moje">To jest aplikacja nerkowa, bip bip</string>
    <string name="action_share">Share</string>
    <string name="myCoolButton">Delete all</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">94043</string>

    <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Temperature Units</string>

    <string name="pref_weight_label">Your weight [kg]</string>
    <string name="pref_weight_key" translatable="false">weight</string>
    <string name="pref_weight_default" translatable="false">60</string>

    <string name="pref_height_label">Your height [cm]</string>
    <string name="pref_height_key" translatable="false">height</string>
    <string name="pref_height_default" translatable="false">170</string>

    <string name="pref_phosphorus_label">Phosphorus limit [mg/day]</string>
    <string name="pref_phosphorus_key" translatable="false">phosphorus</string>
    <string name="pref_phosphorus_default" translatable="false">1</string>

    <string name="pref_potassium_label">Potassium limit [mg/day]</string>
    <string name="pref_potassium_key" translatable="false">potassium</string>
    <string name="pref_potassium_default" translatable="false">2</string>

    <string name="pref_sodium_label">Sodium limit [mg/day]</string>
    <string name="pref_sodium_key" translatable="false">sodium</string>
    <string name="pref_sodium_default" translatable="false">2</string>

    <string name="pref_sex_label">Your sex</string>
    <string name="pref_sex_label_male">Male</string>
    <string name="pref_sex_label_female">Female</string>
    <string name="pref_sex_key" translatable="false">sex</string>
    <string name="pref_sex_male" translatable="false">male</string>
    <string name="pref_sex_female" translatable="false">female</string>

    <string name="pref_fluid_label">Fluid [ml/day]</string>
    <string name="pref_fluid_key" translatable="false">fluid</string>
    <string name="pref_fluid_default" translatable="false">1</string>

    <string name="pref_max_fluid_label">Fluid limit [ml/day]</string>
    <string name="pref_max_fluid_key" translatable="false">fluid limit</string>
    <string name="pref_max_fluid_default" translatable="false">1500</string>

    <string name="pref_dialysis_label">Dialysis frequency [1/days]</string>
    <string name="pref_dialysis_key" translatable="false">dialysis</string>
    <string name="pref_dialysis_default" translatable="false">3</string>


    <string name="search_for_food_label">Search</string>
    <string name="search_for_food_key" translatable="false">search</string>

    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_metric">Metric</string>

    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_imperial">Imperial</string>

    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial" translatable="false">imperial</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=15] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <!-- SyncAdapter related -->
    <!-- nizej ma byc kidney samo czy kidneyapp? -->
    <string name="sync_account_type">kidneyapp20.example.com</string>
    <string name="content_authority">com.example.agnieszka.kidneyapp20</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="title_activity_choose_the_meal">ChooseTheMeal</string>
    <string name="title_activity_activitytocheck">Activitytocheck</string>
    <string name="title_activity_detail2">DetailActivity2</string>
</resources>
