<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_weight_label"
        android:key="@string/pref_weight_key"
        android:defaultValue="@string/pref_weight_default"
        android:inputType="text"
        android:singleLine="true" />

    <EditTextPreference
        android:title="@string/pref_height_label"
        android:key="@string/pref_height_key"
        android:defaultValue="@string/pref_height_default"
        android:inputType="text"
        android:singleLine="true" />

    <EditTextPreference
        android:title="@string/pref_phosphorus_label"
        android:key="@string/pref_phosphorus_key"
        android:defaultValue="@string/pref_phosphorus_default"
        android:inputType="text"
        android:singleLine="true" />

    <EditTextPreference
        android:title="@string/pref_potassium_label"
        android:key="@string/pref_potassium_key"
        android:defaultValue="@string/pref_potassium_default"
        android:inputType="text"
        android:singleLine="true" />

    <EditTextPreference
        android:title="@string/pref_sodium_label"
        android:key="@string/pref_sodium_key"
        android:defaultValue="@string/pref_sodium_default"
        android:inputType="text"
        android:singleLine="true" />

    <EditTextPreference
        android:title="@string/pref_fluid_label"
        android:key="@string/pref_fluid_key"
        android:defaultValue="@string/pref_fluid_default"
        android:inputType="text"
        android:singleLine="true" />

    <EditTextPreference
        android:title="@string/pref_max_fluid_label"
        android:key="@string/pref_max_fluid_key"
        android:defaultValue="@string/pref_max_fluid_default"
        android:inputType="text"
        android:singleLine="true" />

    <EditTextPreference
        android:title="@string/pref_dialysis_label"
        android:key="@string/pref_dialysis_key"
        android:defaultValue="@string/pref_dialysis_default"
        android:inputType="text"
        android:singleLine="true" />

    <Preference android:title="Delete all meals"
        android:key="@string/myCoolButton"
        android:summary="Click here to erase the history"/>

</PreferenceScreen>